--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "new_chess_front",
+  "name": "infection-game",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
+    "antd": "^5.25.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
